Bug 1443212 - Only notify of an added track if it is live. r=jib

Differential Revision: https://phabricator.services.mozilla.com/D97190